chore(api): update schema
